force-app/main/default/objects/Budget__c/fields/Actual_Non_Salary_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Actual_Non_Salary_Overhead__c</fullName>
    <inlineHelpText>The percentage applied to non-salary items to cover the My Uni operating costs such as infrastructure, facilities and services.</inlineHelpText>
    <label>Actual Non-Salary Overhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>