force-app/main/default/objects/Budget__c/fields/Actual_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Actual_Overhead__c</fullName>
    <inlineHelpText>The percentage overhead applied to researcher salary to cover My Uni infrastructure, facilities and services.</inlineHelpText>
    <label>Actual Salary Overhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>