force-app/main/default/objects/Budget__c/fields/Actual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Profit__c</fullName>
    <inlineHelpText>The percentage applied to researcher salary to be returned to the university/researcher.</inlineHelpText>
    <label>Actual Salary Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>