force-app/main/default/objects/Budget__c/fields/Actual_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rate_Type__c</fullName>
    <inlineHelpText>The type of funding being applied for to determine the appropriate overhead and profit rates.</inlineHelpText>
    <label>Actual Project Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Collaboration</fullName>
            </value>
            <value>
                <fullName>Research Consultancy (Collaborative)</fullName>
            </value>
            <value>
                <fullName>Research Consultancy (Commercial)</fullName>
            </value>
            <value>
                <fullName>Non-Research Consultancy</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Grant with Overheads</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>