force-app/main/default/objects/Budget__c/fields/Cash_Contributions_by_My_Uni__c.field-meta.xml
<CustomField>
    <fullName>Cash_Contributions_by_My_Uni__c</fullName>
    <label>My Uni Internal Cash Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>