force-app/main/default/objects/Budget__c/fields/Daily_On_Costs__c.field-meta.xml
<CustomField>
    <fullName>Daily_On_Costs__c</fullName>
    <label>Daily On-Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>