force-app/main/default/objects/Budget__c/fields/Daily_Overheads__c.field-meta.xml
<CustomField>
    <fullName>Daily_Overheads__c</fullName>
    <label>Daily Overheads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>