force-app/main/default/objects/Budget__c/fields/Daily_Profits__c.field-meta.xml
<CustomField>
    <fullName>Daily_Profits__c</fullName>
    <label>Daily Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>