force-app/main/default/objects/Budget__c/fields/Default_Non_salary_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Default_Non_salary_Overhead__c</fullName>
    <label>Default Non-Salary Overhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>