force-app/main/default/objects/Budget__c/fields/External_Body_Cash_Contributions__c.field-meta.xml
<CustomField>
    <fullName>External_Body_Cash_Contributions__c</fullName>
    <label>External Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>