force-app/main/default/objects/Budget__c/fields/I_RS_Budget_Calculator_Label_UI_Locked__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Budget_Calculator_Label_UI_Locked__c</fullName>
    <formula>$Setup.Budget_Calculator_Label_UI_Locked__c.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Calculator Label - UI Locked</label>
    <type>Text</type>
</CustomField>