force-app/main/default/objects/Budget__c/fields/I_RS_Funding_Body_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body_Id__c</fullName>
    <formula>Project_Proposal__r.Account_Organisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Body Id</label>
    <type>Text</type>
</CustomField>