force-app/main/default/objects/Budget__c/fields/I_RS_Line_Item_Permission_Create__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Line_Item_Permission_Create__c</fullName>
    <formula>/*Currently the same as delete, so we can just piggy-back that*/

I_RS_Line_Item_Permission_Delete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Permission - Create</label>
    <type>Checkbox</type>
</CustomField>