force-app/main/default/objects/Budget__c/fields/I_RS_Line_Item_Permission_Delete__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Line_Item_Permission_Delete__c</fullName>
    <formula>/*For Researchers, only Drafts can be deleted*/
(
TEXT(Status__c) = &apos;Draft&apos; &amp;&amp;
$User.Is_Researcher_User__c = &apos;1&apos;
)

||

/*Non-researchers have full access*/
$User.Is_Researcher_User__c = &apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Permission - Delete</label>
    <type>Checkbox</type>
</CustomField>