force-app/main/default/objects/Budget__c/fields/I_RS_Year_1_Starts__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_1_Starts__c</fullName>
    <formula>YEAR( Project_Proposal__r.Project_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1 Starts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>