force-app/main/default/objects/Budget__c/fields/In_kind_My_Uni_Non_Salary__c.field-meta.xml
<CustomField>
    <fullName>In_kind_My_Uni_Non_Salary__c</fullName>
    <label>My Uni In-Kind Non-Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>