force-app/main/default/objects/Budget__c/fields/My_Uni_On_Costs__c.field-meta.xml
<CustomField>
    <fullName>My_Uni_On_Costs__c</fullName>
    <inlineHelpText>Includes payroll tax, workcover and superannuation.</inlineHelpText>
    <label>My Uni On-Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>