force-app/main/default/objects/Budget__c/fields/My_Uni_Total__c.field-meta.xml
<CustomField>
    <fullName>My_Uni_Total__c</fullName>
    <description>My Uni total: internal cash, external cash plus in-kind.</description>
    <inlineHelpText>My Uni total: internal cash, external cash plus in-kind.</inlineHelpText>
    <label>My Uni Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>