force-app/main/default/objects/Budget__c/fields/Overhead__c.field-meta.xml
<CustomField>
    <fullName>Overhead__c</fullName>
    <inlineHelpText>Default salary based on the type of funding</inlineHelpText>
    <label>Default Salary Overhead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>