force-app/main/default/objects/Budget__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <inlineHelpText>Default salary margin based on the type of funding</inlineHelpText>
    <label>Default Salary Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>