force-app/main/default/objects/Budget__c/fields/Project_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_Type__c</fullName>
    <formula>TEXT( Project_Proposal__r.Project_Sub_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>