force-app/main/default/objects/Budget__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <formula>TEXT( Project_Proposal__r.Project_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Type</label>
    <type>Text</type>
</CustomField>