force-app/main/default/objects/Budget__c/fields/Rate_Type_Being_Used__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type_Being_Used__c</fullName>
    <label>Rate Type Being Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>