force-app/main/default/objects/Budget__c/fields/Total_Daily_Charge_Out_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Charge_Out_Rate__c</fullName>
    <label>Total Daily Charge Out Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>