force-app/main/default/objects/Budget__c/fields/Total_Daily_Charge_Out_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Charge_Out_Rate_Formula__c</fullName>
    <formula>Daily_Salary__c +  Daily_On_Costs__c +   Daily_Overheads__c  +   Daily_Profits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Daily Charge Out Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>