force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Proposal__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Project_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>